# x-ray-abnormality-detection

./: .gitignore  CNNs.ipynb  LICENSE  README.md  pyproject.toml
data/: .gitignore
notebooks/: EDA.ipynb  cnn-hparam-tuning.ipynb  cnn.ipynb  densenet169_pt_imagenet.ipynb  densenet201_pt_imagenet.ipynb  evaluation.ipynb  resnet50_pt_imagenet.ipynb  utils.py  vgg19_pt_imagenet.ipynb
