[tool.poetry]
name = "x-ray-abnormality-detection"
version = "0.1.0"
description = "An attempt at the Bone X-Ray Deep Learning Competition (Stanford ML Group)"
authors = ["Silva Ndoja <silvandoja1@gmail.com>", "Ilias Antonopoulos <ilias.antonopoulos@yahoo.gr>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ilias-ant/x-ray-abnormality-detection"
keywords = ["deep-learning", "image-classification", "mura-dataset", "stanford-ml-group"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

tensorflow = "2.8.0"
keras-tuner = "1.1.0"
pandas = "1.4.1"
plotnine = "^0.8.0"
pydot = "^1.4.2"
graphviz = "^0.19.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
notebook = "^6.4.8"
black-nb = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
